Add readme file, screeshot of project, fix small alignment error on html

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div class="container row">
       <div class="d-flex flex-column col-7">
         <div class="m-4 title d-flex align-items-center">
-          <h2 class="m-2">Recent scores</h2>
+          <h2>Recent scores</h2>
           <button class="refresh-button mx-4 mt-1" type="button">Refresh</button>
         </div>
         <table class="mx-4 table table-light table-striped border border-dark">
@@ -31,7 +31,7 @@
         <h2 class="score-title m-4">Add your score</h2>
         <form class="mx-4 d-flex flex-column" action="#">
           <input class="border border-dark" type="text" placeholder="Your name" required>
-          <input class="border border-dark my-3" type="number" placeholder="Your number" required>
+          <input class="border border-dark my-3" type="number" placeholder="Your score" required>
           <button class="align-self-end" type="button">Submit</button>
         </form>
       </div>
