Implement function to the refresh button

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <div class="d-flex flex-column col-7">
         <div class="m-4 title d-flex align-items-center">
           <h2>Recent scores</h2>
-          <button class="refresh-button mx-4 mt-1" type="button">Refresh</button>
+          <button class="refresh-button mx-4 mt-1" id="refresh" type="button">Refresh</button>
         </div>
         <table class="mx-4 table table-light table-striped border border-dark">
           <tbody id="table-body">
