--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           <h2>Recent scores</h2>
           <button class="refresh-button mx-4 mt-1" id="refresh" type="button">Refresh</button>
         </div>
-        <table class="mx-4 table table-light table-striped border border-dark">
+        <table class="mx-4 table border border-dark">
           <tbody id="table-body">
           </tbody>
         </table>
