--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,24 @@
 <body>
   <main>
     <h1 class="m-5">Leaderboard</h1>
-    <div class="container row">
+    <div class="container row justify-content-between">
       <div class="d-flex flex-column col-7">
         <div class="m-4 title d-flex align-items-center">
           <h2>Recent scores</h2>
-          <button class="refresh-button mx-4 mt-1" id="refresh" type="button">Refresh</button>
+          <button class="refresh-button mx-4 mt-1 btn" id="refresh" type="reset">Refresh</button>
         </div>
         <table class="mx-4 table border border-dark">
           <tbody id="table-body">
           </tbody>
         </table>
       </div>
-      <div class="d-flex flex-column justify-conter-center col-4">
+      <div class="d-flex flex-column col-4">
         <h2 class="score-title m-4">Add your score</h2>
         <form class="mx-4 d-flex flex-column" id="submit-form">
 
           <input class="border border-dark" id="name" type="text" placeholder="Your name" required>
           <input class="border border-dark my-3" id="score" type="number" placeholder="Your score" required>
-          <button class="align-self-end" type="submit">Submit</button>
+          <button class="align-self-end submit-btn btn" type="submit">Submit</button>
         </form>
 
       </div>
