--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 <body>
   <main>
     <h1 class="m-5">Leaderboard</h1>
-    <div class="container row justify-content-between">
-      <div class="d-flex flex-column col-7">
+    <div class="container-fluid row justify-content-between">
+      <div class="d-flex flex-column col-md-7 col-12">
         <div class="m-4 title d-flex align-items-center">
           <h2>Recent scores</h2>
           <button class="refresh-button mx-4 mt-1 btn" id="refresh" type="reset">Refresh</button>
@@ -22,7 +22,7 @@
           </tbody>
         </table>
       </div>
-      <div class="d-flex flex-column col-4">
+      <div class="d-flex flex-column col-12 col-md-5 col-lg-4">
         <h2 class="score-title m-4">Add your score</h2>
         <form class="mx-4 d-flex flex-column" id="submit-form">
 
